--- a/style.css
+++ b/style.css
@@ -109,6 +109,7 @@ video {
   --spacing-lg: 20px;
   --spacing-xl: 40px;
   --shadow: rgba(0, 0, 0, 0.57) 0px 1px 5px;
+  --text-shadow: rgba(0, 0, 0, 0.40) 0px 5px 5px;
 }
 
 p {
@@ -139,7 +140,16 @@ body {
   justify-content: center;
   align-items: center;
 }
-
+#announcement {
+    color: var(--textColor);
+    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    font-size: 30px;
+    text-shadow: var(--text-shadow);
+}
+.hide{
+    
+    opacity: 0;
+}
 #gameGrid {
   display: grid;
   grid-template-columns: repeat(3, 150px);
@@ -153,12 +163,14 @@ body {
   color: var(--XOColor);
   font-size: var(--spacing-lg);
   font-weight: 600;
+  font-size: 3rem;
   border: none;
 }
-.grid-btn:hover {
-  opacity: 95%;
+.grid-btn:hover{
+
   cursor: pointer;
 }
+
 #gridResetBtn {
   width: 150px;
   background-color: var(--btnColor);
